@@ -1,3 +1,11 @@
+2002-02-10  Daniel Jacobowitz  <drow@mvista.com>
+
+	* coffdump.c: Include "getopt.h" after "bucomm.h"
+	so that macros are defined correctly.
+	* nlmconv.c: Add PARAMS ((const time_t *)) to localtime
+	prototype.  Prototype main.
+	* nlmheader.y: Add PARAMS ((int)) to strerror prototype.
+
 2002-02-06  Alexandre Oliva  <aoliva@redhat.com>
 
 	* MAINTAINERS: Added self as SH co-maintainer.
